--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 		<script type="text/javascript" src="js/lib/util/util.js"></script>
 
 		<script type="text/javascript" src="js/lib/core/core.js"></script>
+		<script type="text/javascript" src="js/lib/core/storagemanager.js"></script>
 		<!-- Create Menu -->
 		<script type="text/javascript" src="js/lib/gui/menu.js"></script>
 	</head>
