--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,15 @@
 		
 		<script type="text/javascript" src="js/lib_external/jquery-ui/jquery-ui.min.js"></script>
 
+		<script type="text/javascript" src="node_modules/jed/jed.js"></script>
+
 		<!-- Internal utils libs -->
 		<script type="text/javascript" src="js/lib/util/util.js"></script>
 
 		<script type="text/javascript" src="js/lib/core/core.js"></script>
 		<script type="text/javascript" src="js/lib/core/storagemanager.js"></script>
 		<!-- Create Menu -->
-		<script type="text/javascript" src="js/lib/gui/menu.js"></script>
+		<script type="text/javascript" src="js/lib/gui/i18n.js"></script>
 	</head>
 	<body>
 	
@@ -19,8 +21,8 @@
 		<div id="navactions"></div>
 		<div id="navsections"></div>
 		<div id="targetcontent"></div></script>
-
 		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/lib/util/konami.js"></script>
+		<script type="text/javascript" src="js/lib/gui/menu.js"></script>
 	</body>
 </html>
