Metadata Dialog added

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 		<script type="text/javascript" src="js/lib_external/jquery/jquery.min.js"></script>
 		
 		<script type="text/javascript" src="js/lib_external/jquery-ui/jquery-ui.min.js"></script>
+		<!-- charset -->
+		<meta charset="UTF-8"> 
 
 		<!-- Internal utils libs -->
 		<script type="text/javascript" src="js/lib/util/util.js"></script>
@@ -12,6 +14,9 @@
 		<script type="text/javascript" src="js/lib/core/storagemanager.js"></script>
 		<!-- Create Menu -->
 		<script type="text/javascript" src="js/lib/gui/menu.js"></script>
+		<!-- Dialogs -->
+		<script type="text/javascript" src="js/lib/gui/dialog.js"></script>
+		<script type="text/javascript" src="js/lib/gui/dialogMetadata.js"></script>
 	</head>
 	<body>
 	
