--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,20 @@
 		<script type="text/javascript" src="js/lib/util/util.js"></script>
 
 		<script type="text/javascript" src="js/lib/core/core.js"></script>
+		<script type="text/javascript" src="js/lib/gui/ui.js"></script>
 		<script type="text/javascript" src="js/lib/core/storagemanager.js"></script>
 		<!-- Create Menu -->
 		<script type="text/javascript" src="js/lib/gui/i18n.js"></script>
 	</head>
 	<body>
 	
-		<div id="menu"></div>
+		
 		<div id="navactions"></div>
 		<div id="navsections"></div>
 		<div id="targetcontent"></div></script>
+		<div id="modal"></div>
 		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/lib/util/konami.js"></script>
-		<script type="text/javascript" src="js/lib/gui/menu.js"></script>
+		
 	</body>
 </html>
