--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,9 @@
 	<head>
 		<!-- External common libs-->
 		<script type="text/javascript" src="js/lib_external/jquery/jquery.min.js"></script>
-		
 		<script type="text/javascript" src="js/lib_external/jquery-ui/jquery-ui.min.js"></script>
+		
+		<script type="text/javascript" src="js/lib_external/contextmenu/contextMenu.js"></script>
 		<script type="text/javascript" src="js/lib_external/jquery-layout/stable/jquery.layout.min.js" ></script>
 		<script type="text/javascript" src="node_modules/jed/jed.js"></script>
 
