rename core by backend. Add controller class

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
 			CBI18n = new Translator(require('./i18n/es.js'));
 		</script>
 
-		<script type="text/javascript" src="js/lib/core/core.js"></script>
+		<script type="text/javascript" src="js/lib/core/backend.js"></script>
+		<script type="text/javascript" src="js/lib/core/controller.js"></script>
 		<script type="text/javascript" src="js/lib/gui/ui.js"></script>
 		<script type="text/javascript" src="js/lib/core/storagemanager.js"></script>
 		<!-- Create Menu -->
