--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 		<script type="text/javascript" src="js/lib_external/contextmenu/contextMenu.js"></script>
 		<script type="text/javascript" src="js/lib_external/jquery-layout/stable/jquery.layout.min.js" ></script>
 		<script type="text/javascript" src="node_modules/jed/jed.js"></script>
+		<script type="text/javascript" src="themes/default/js/bootstrap.min.js" ></script>
 
 		<!-- Internal utils libs -->
 		<script type="text/javascript" src="js/lib/util/util.js"></script>
