insert sections/subsections give name

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
 		<script type="text/javascript" src="js/lib_external/contextmenu/contextMenu.js"></script>
 		<script type="text/javascript" src="js/lib_external/jquery-layout/stable/jquery.layout.min.js" ></script>
 		<script type="text/javascript" src="node_modules/jed/jed.js"></script>
-		<script type="text/javascript" src="themes/default/js/bootstrap.min.js" ></script>
 
 		<!-- Internal utils libs -->
 		<script type="text/javascript" src="js/lib/util/util.js"></script>
@@ -33,6 +32,6 @@
 
 		<div id="modal"></div>
 		<script type="text/javascript" src="js/main.js"></script>
-		<script type="text/javascript" src="js/lib/util/konami.js"></script>
+		<script type="text/javascript" src="js/lib/util/debug.js"></script>
 	</body>
 </html>
