--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
 		</script>
 
 		<script type="text/javascript" src="js/lib/core/backend.js"></script>
+		<script type="text/javascript" src="js/lib/core/configusermanager.js"></script>
 		<script type="text/javascript" src="js/lib/core/controller.js"></script>
 		<script type="text/javascript" src="js/lib/gui/ui.js"></script>
 		<script type="text/javascript" src="js/lib/core/storagemanager.js"></script>
