Correction of minor errors and import option

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
 		<!-- Dialogs -->
 		<script type="text/javascript" src="js/lib/gui/dialog.js"></script>
 		<script type="text/javascript" src="js/lib/gui/dialogMetadata.js"></script>
+		<!-- Imports -->
+		<script type="text/javascript" src="js/lib/core/import.js"></script>
+		<script type="text/javascript" src="js/lib_external/jszip/jszip.js"></script>
 	</head>
 	<body>
 	
