--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,12 @@
 			CBI18n = new Translator(require('./i18n/es.js'));
 		</script>
 
-		<script type="text/javascript" src="js/lib/core/backend.js"></script>
+		<script type="text/javascript" src="js/lib/core/backend/core.js"></script>
+		<script type="text/javascript" src="js/lib/gui/ui/core.js"></script>
+		<script type="text/javascript" src="js/lib/gui/ui/initialwizard/core.js"></script>
+		
 		<script type="text/javascript" src="js/lib/core/configusermanager.js"></script>
 		<script type="text/javascript" src="js/lib/core/controller.js"></script>
-		<script type="text/javascript" src="js/lib/gui/ui.js"></script>
 		<script type="text/javascript" src="js/lib/core/storagemanager.js"></script>
 		<!-- Create Menu -->
 		
