adapt to new version

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
 		<script type="text/javascript" src="js/lib/gui/dialogMetadata.js"></script>
 		<!-- Imports -->
 		<script type="text/javascript" src="js/lib/core/import.js"></script>
+		<script type="text/javascript" src="js/lib/core/importMetadata.js"></script>
 		<script type="text/javascript" src="js/lib_external/jszip/jszip.js"></script>
 
 	</head>
