Added import HTML option

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
 		<!-- Imports -->
 		<script type="text/javascript" src="js/lib/core/import.js"></script>
 		<script type="text/javascript" src="js/lib/core/importMetadata.js"></script>
+		<script type="text/javascript" src="js/lib/core/importHTML.js"></script>
 		<script type="text/javascript" src="js/lib_external/jszip/jszip.js"></script>
 
 	</head>
