--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
 		<script type="text/javascript" src="js/lib/core/import.js"></script>
 		<script type="text/javascript" src="js/lib/core/importMetadata.js"></script>
 		<script type="text/javascript" src="js/lib/core/importHTML.js"></script>
+		<script type="text/javascript" src="js/lib/core/importSCORM.js"></script>
 		<script type="text/javascript" src="js/lib_external/jszip/jszip.js"></script>
 
 	</head>
