--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
 		<script type="text/javascript" src="js/lib_external/jquery-layout/stable/jquery.layout.min.js" ></script>
 		<script type="text/javascript" src="js/lib_external/contextmenu/contextMenu.js"></script>
 		<script type="text/javascript" src="js/lib_external/jszip/jszip.js"></script>
+		<script type="text/javascript" src="js/lib_external/jquery-hotkeys/jquery.hotkeys.js"></script>
+		
 		
 		<script type="text/javascript" src="node_modules/jed/jed.js"></script>
 
