--- a/tests/indice_cloud.html
+++ b/tests/indice_cloud.html
@@ -15,10 +15,7 @@
 			</ol>
 		</aside>	
 	<div class="ui-layout-center">
-			<ol>
-				<li><a href='#data1'>Sect 1</a></li>
-				<li><a href='#data2'>Sect 2</a></li>
-			</ol>
+
 	
 		<div  class="ui-layout-content">	
 			<article id="data1">
@@ -44,14 +41,16 @@
 		$(document).ready(
 			// Initialize layout
 			function () {
-				$(".ui-layout-center").tabs();
-
+				/*$(".ui-layout-center").tabs();*/
+				$('article').css('visibility','hidden');
+				$('article:first').css('visibility','initial');
 				$('body').layout({ applyDemoStyles: true , south: { minSize: 60}});
 			});
 			// Simulate tab click when click on the sidebar
 			$('aside>ol>li>a').click(function(){
 				var clicked=$(this).attr('href');
-				$('.ui-layout-center ol li a[href='+clicked+']').click();
+				$('article').css('visibility','hidden');
+				$('article[id='+clicked.substr(1)+']').css('visibility','initial');
 			});
 			// Initialize buttons
 			  $(function() {
