new function to rotate

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 		<script type="text/javascript" src="js/lib_external/contextmenu/contextMenu.js"></script>
 		<script type="text/javascript" src="js/lib_external/jszip/jszip.js"></script>
 		<script type="text/javascript" src="js/lib_external/jquery-hotkeys/jquery.hotkeys.js"></script>
-		
+		<script type="text/javascript" src="js/lib/util/jquery-rotate.js"></script>
 		
 		<script type="text/javascript" src="node_modules/jed/jed.js"></script>
 
