Export WebZip feature

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,10 @@
 		<!-- Exports -->
 		<script type="text/javascript" src="js/lib/core/exportHTML.js"></script>
 		<script type="text/javascript" src="js/lib/gui/ui/exporthtmlwizard/core.js"></script>
+
+ 	<script type="text/javascript" src="js/lib/gui/ui/exportwebzipwizard/core.js"></script>
+ 	<script type="text/javascript" src="js/lib/core/exportWebZip.js"></script>
+
 	</head>
 	<body>
 	
