EPUB export feature

--- a/src/index.html
+++ b/src/index.html
@@ -51,8 +51,12 @@
 		<script type="text/javascript" src="js/lib/core/exportHTML.js"></script>
 		<script type="text/javascript" src="js/lib/gui/ui/exporthtmlwizard/core.js"></script>
 
- 	<script type="text/javascript" src="js/lib/gui/ui/exportwebzipwizard/core.js"></script>
- 	<script type="text/javascript" src="js/lib/core/exportWebZip.js"></script>
+ 		<script type="text/javascript" src="js/lib/gui/ui/exportwebzipwizard/core.js"></script>
+ 		<script type="text/javascript" src="js/lib/core/exportWebZip.js"></script>
+
+		<script type="text/javascript" src="js/lib/gui/ui/exportepubwizard/core.js"></script>
+		<script type="text/javascript" src="js/lib/core/exportEpub.js"></script>
+
 
 	</head>
 	<body>
