added IMS package importation

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 		<script type="text/javascript" src="js/lib/core/import.js"></script>
 		<script type="text/javascript" src="js/lib/core/importMetadata.js"></script>
 		<script type="text/javascript" src="js/lib/core/importHTML.js"></script>
-		<script type="text/javascript" src="js/lib/core/importSCORM.js"></script>
+		<script type="text/javascript" src="js/lib/core/importPackage.js"></script>
 
         <!--Export-->
         <script type="text/javascript" src="js/lib/gui/ui/exportpdfwizard/core.js"></script>
