--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,8 @@
 		<script type="text/javascript" src="js/lib/core/importMetadata.js"></script>
 		<script type="text/javascript" src="js/lib/core/importHTML.js"></script>
 		<script type="text/javascript" src="js/lib/core/importPackage.js"></script>
+		<script type="text/javascript" src="js/lib/core/importEPUB.js"></script>
+		<script type="text/javascript" src="js/lib/core/importELP.js"></script>
 
         <!--Export-->
         <script type="text/javascript" src="js/lib/gui/ui/exportpdfwizard/core.js"></script>
