--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,7 @@
 
 		<!-- Exports -->
 		<script type="text/javascript" src="js/lib/core/exportHTML.js"></script>
+		<script type="text/javascript" src="js/lib/core/exportHTMLSplit.js"></script>
 		<script type="text/javascript" src="js/lib/gui/ui/exporthtmlwizard/core.js"></script>
 
  		<script type="text/javascript" src="js/lib/gui/ui/exportwebzipwizard/core.js"></script>
