--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
 		<script type="text/javascript" src="js/lib/core/configusermanager.js"></script>
 		<script type="text/javascript" src="js/lib/core/controller.js"></script>
 		<script type="text/javascript" src="js/lib/core/storagemanager.js"></script>
+		<script type="text/javascript" src="js/lib/core/metadatamanager.js"></script>
 		<!-- Create Menu -->
 		<script type="text/javascript" src="js/lib/gui/dialog.js"></script>
 		<script type="text/javascript" src="js/lib/gui/dialogMetadata.js"></script>
@@ -62,6 +63,9 @@
 
 		<script type="text/javascript" src="js/lib/gui/ui/exportscormwizard/core.js"></script>
 		<script type="text/javascript" src="js/lib/core/exportScorm.js"></script>
+
+		<script type="text/javascript" src="js/lib/gui/ui/exportimswizard/core.js"></script>
+		<script type="text/javascript" src="js/lib/core/exportIms.js"></script>
 
 
 	</head>
