--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,9 @@
 		<script type="text/javascript" src="js/lib/gui/ui/exportimswizard/core.js"></script>
 		<script type="text/javascript" src="js/lib/core/exportIms.js"></script>
 
+		<script type="text/javascript" src="js/lib/gui/ui/exportimslrmwizard/core.js"></script>
+		<script type="text/javascript" src="js/lib/core/exportImslrm.js"></script>
+
 
 	</head>
 	<body>
