enable temporally debug view

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
 		<!-- charset -->
 		<meta charset="UTF-8"> 
 
+		<script type="text/javascript">
+			var win = nw.Window.get();
+			win.showDevTools();
+		</script>
 		<!-- External common libs-->
 		<script type="text/javascript" src="js/lib_external/jquery/jquery.min.js"></script>
 		<script type="text/javascript" src="js/lib_external/jquery-ui/jquery-ui.min.js"></script>
